--- a/src/components/Chip.module.scss
+++ b/src/components/Chip.module.scss
@@ -2,24 +2,35 @@
 
 .chip {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  justify-self: center;
-  height: 2rem;
-  line-height: 2rem;
-  border-radius: 1rem;
+  align-items: center;
+  height: fit-content;
+  border-radius: 0.9rem;
   background-color: $BROWN;
   color: white;
   border: none;
-  padding: 0 1rem 0 0.5rem;
-  text-align: center;
-  vertical-align: middle;
+  width: fit-content;
+  padding: 0.2rem 1rem 0.2rem 1rem;
   margin: 0.2rem;
-  svg {
-    display: inline-block;
-    vertical-align: middle;
+
+  font-size: 1.6rem;
+  &:hover {
+    background-color: $BROWN;
+  }
+  p {
+    height: fit-content;
     font-size: 1rem;
-    margin: auto;
-    padding: 0.5rem;
+    margin: 0;
+    margin-left: 0.5rem;
+
+    &:hover {
+      background-color: $BROWN;
+    }
+  }
+  svg {
+    background-color: $BROWN;
+
+    &:hover {
+      background-color: $BROWN;
+    }
   }
 }
