--- a/src/components/MovieList.module.scss
+++ b/src/components/MovieList.module.scss
@@ -1,14 +1,21 @@
+@use "../models/global-styles.scss" as *;
+
 .movie-list {
-  list-style-type: none;
-  background: green;
-  width: 70vw;
+  display: flex;
+  flex-wrap: wrap;
+  align-self: center;
+  justify-content: space-around;
+
   margin: auto;
+  // background: $GRAY;
+  width: 80vw;
   padding: 0;
+  border-radius: 1rem;
 }
 
-.movie-list-item {
-  height: 10rem;
-  border-top: solid 1px;
-  margin-top: 1px;
-  padding: 1rem;
-}
+// .movie-list-item-container {
+//   // height: 10rem;
+//   border-top: solid 1px;
+//   margin-top: 1px;
+//   // padding: 1rem;
+// }
