--- a/src/components/Chip.module.scss
+++ b/src/components/Chip.module.scss
@@ -3,11 +3,15 @@
 .chip {
   display: flex;
   align-items: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   border-radius: 0.9rem;
   background-color: $BROWN;
   color: white;
   border: none;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   padding: 0.2rem 1rem 0.2rem 1rem;
   margin: 0.2rem;
@@ -16,21 +20,23 @@
   &:hover {
     background-color: $BROWN;
   }
-  p {
+  & > p {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     font-size: 1rem;
     margin: 0;
     margin-left: 0.5rem;
 
     &:hover {
-      background-color: $BROWN;
+      background-color: $BROWN !important;
     }
   }
-  svg {
+  & > svg {
     background-color: $BROWN;
 
     &:hover {
-      background-color: $BROWN;
+      background-color: $BROWN !important;
     }
   }
 }
