--- a/src/pages/MovieSummaryPage.module.scss
+++ b/src/pages/MovieSummaryPage.module.scss
@@ -24,7 +24,7 @@
   @media (min-width: $mobile-threshold) {
     grid-template-columns: 3rem 1fr;
   }
-
+  padding-right: 1rem;
   grid-area: header;
   color: $ORANGE;
   text-align: center;
