modified card view & movie view

--- a/src/models/global-styles.scss
+++ b/src/models/global-styles.scss
@@ -6,4 +6,5 @@ $ORANGE: #f28157;
 $BROWN: #bf665e;
 $BACKGROUNDGRAY: #f2f2f2;
 $GRAY: rgb(65, 65, 65);
-$mobile-threshold: 40rem;
+$mobile-threshold: 768px;
+$full-view-threshold: 1200px;
