--- a/src/components/MovieListItem.module.scss
+++ b/src/components/MovieListItem.module.scss
@@ -1,67 +1,52 @@
 @use "../models/global-styles.scss" as *;
 
-.anchor-wrapper {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
+.card {
+  border-radius: 1rem;
+  // padding: 1rem;
+  height: 28rem;
+  width: 20rem;
+
+  background: $GRAY;
+  margin: 1rem;
   a {
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
     text-decoration: none;
-    :hover {
-      background-color: $DARKERSEA;
+  }
+}
+
+.card-content {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  border-radius: 1rem;
+  overflow: hidden;
+
+  @keyframes color_change {
+    from {
+      background-color: transparent;
+    }
+    to {
+      background-color: rgba($ORANGE, 0.2);
     }
   }
+  &:hover {
+    animation: color_change ease-out forwards 1s;
+  }
 }
 
-.movie-card {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
-  color: $ORANGE;
-  width: 60vw;
-  background-color: $GRAY;
-  border-radius: 1rem;
-  margin: 1rem;
+.card-text {
+  background: linear-gradient(
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0.5) 5rem,
+    rgba(0, 0, 0, 0.8) 90%,
+    rgba(0, 0, 0, 0.9)
+  );
+  align-self: flex-end;
   padding: 1rem;
-  @media (min-width: $mobile-threshold) {
-    width: 25vw;
-  }
-  @media (min-width: 1400px) {
-    width: 15vw;
-  }
-}
-.poster-container {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: auto;
-}
-.poster {
+  height: fit-content;
   width: 100%;
-  margin: auto;
-  border-radius: 1rem;
-}
-.chip-container {
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-.text-container {
-  display: inline-block;
-}
-
-.title {
-  display: block;
-  text-decoration: none;
-}
-.year {
-  display: block;
+  color: $ORANGE;
+  .title {
+    margin-top: 5rem;
+    color: white;
+  }
 }
