--- a/src/pages/MovieList.module.scss
+++ b/src/pages/MovieList.module.scss
@@ -7,6 +7,7 @@
   justify-content: space-around;
   margin: auto;
   width: 80vw;
+  max-width: 1500px;
   padding: 0;
   border-radius: 1rem;
 }
@@ -15,6 +16,7 @@
   display: flex;
   align-self: center;
   justify-content: center;
+  margin: 1rem;
   color: $ORANGE;
   font-size: 2rem;
 }
