--- a/src/pages/MovieSummaryPage.module.scss
+++ b/src/pages/MovieSummaryPage.module.scss
@@ -2,124 +2,72 @@
 
 .summary-container {
   display: block;
-  width: 100%;
+
+  grid-template-columns: 80%;
+
+  max-width: 1500px;
   margin: auto;
+
   @media (min-width: $mobile-threshold) {
     display: grid;
-    grid-template-areas:
-      "header header header "
-      "left main right";
-    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 3fr;
+  }
+
+  @media (min-width: $full-view-threshold) {
     grid-template-columns: 1fr 3fr 1fr;
-    gap: 1rem;
-    width: 90vw;
   }
 }
 
 .header-container {
   display: grid;
-  grid-template-areas: "back headerText";
-  grid-template-rows: auto;
   grid-template-columns: 5rem 1fr;
+  grid-column: 1 / -1;
+  padding-right: 1rem;
+
+  color: $ORANGE;
+  text-align: center;
+
   @media (min-width: $mobile-threshold) {
     grid-template-columns: 3rem 1fr;
   }
-  padding-right: 1rem;
-  grid-area: header;
-  color: $ORANGE;
-  text-align: center;
+
   .back-button {
     color: $SEA;
+    font-size: 3rem;
+    margin-left: 1rem;
     margin-top: auto;
     margin-bottom: auto;
-    font-size: 3rem;
+
     &:hover {
       color: $DARKERSEA;
     }
   }
 }
 
-.poster-chip-wrapper {
-  grid-area: left;
-}
+.poster {
+  display: block;
 
-.poster-container {
-  text-align: center;
-  img {
-    display: block;
-    width: 80%;
-    height: auto;
-    margin: auto;
-    border-radius: 1rem;
-    @media (min-width: $mobile-threshold) {
-      width: 100%;
-    }
-  }
-}
+  height: auto;
+  margin: auto;
 
-.chip-container {
-  padding: 1rem;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-self: flex-start;
-}
+  margin: auto;
 
-.score-container {
-  $BACKGROUNDCOLOR: $GRAY;
-  grid-area: right;
-  background-color: $BACKGROUNDCOLOR;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
   border-radius: 1rem;
-  margin: 1rem;
-  color: $DARKERSEA;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  p {
-    color: $SEA;
-    margin: 0 0.5rem 0 0.5rem;
-  }
-  .stats-container {
-    flex-basis: 100%;
-  }
-  //StatRow access walk around
-  > div > div {
-    > div:first-child {
-      background-color: $DARKERSEA;
-    }
-    > div {
-      border-color: $DARKERSEA;
 
-      background-color: $BACKGROUNDCOLOR;
-      color: white;
-    }
-  }
   @media (min-width: $mobile-threshold) {
-    margin: 0;
-  }
-}
-
-.featured-stat {
-  margin-top: 1rem;
-  display: inline-flex;
-  flex-direction: column;
-  text-align: center;
-  font-size: 5rem;
-  svg {
-    margin: auto;
-  }
-  p {
-    font-size: 2rem;
+    margin: 1rem;
   }
 }
 
 .main-section-container {
-  grid-area: main;
   background-color: transparent;
   border-radius: 1rem;
+
+  grid-row: 2 / span 2;
+  grid-column: 2;
+
+  margin: 1rem;
+  padding: 1rem;
 
   @media (min-width: $mobile-threshold) {
     background-color: $BACKGROUNDGRAY;
@@ -128,26 +76,18 @@
 
 .plot-container {
   text-align: justify;
+
   background-color: $BACKGROUNDGRAY;
-  margin: 1rem;
   border-radius: 1rem;
+  margin: 1rem;
   padding: 1rem;
+
   @media (min-width: $mobile-threshold) {
     padding: 0;
   }
 }
 
-.people-container {
-  background-color: $BACKGROUNDGRAY;
-  margin: 1rem;
-  border-radius: 1rem;
-
-  padding: 1rem;
-  @media (min-width: $mobile-threshold) {
-    padding: 0;
-  }
-}
-
-.stats-container {
-  margin: 1rem;
+.people-listings {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
