--- a/src/components/MovieListItem.module.scss
+++ b/src/components/MovieListItem.module.scss
@@ -2,7 +2,6 @@
 
 .card {
   border-radius: 1rem;
-  // padding: 1rem;
   height: 28rem;
   width: 20rem;
 
@@ -20,6 +19,15 @@
   border-radius: 1rem;
   overflow: hidden;
 
+  @-webkit-keyframes color_change {
+    from {
+      background-color: transparent;
+    }
+    to {
+      background-color: rgba($ORANGE, 0.2);
+    }
+  }
+
   @keyframes color_change {
     from {
       background-color: transparent;
@@ -29,6 +37,7 @@
     }
   }
   &:hover {
+    -webkit-animation: color_change ease-out forwards 1s;
     animation: color_change ease-out forwards 1s;
   }
 }
@@ -42,6 +51,8 @@
   );
   align-self: flex-end;
   padding: 1rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
   height: fit-content;
   width: 100%;
   color: $ORANGE;
