minr styling fixes

--- a/src/components/StatBox.module.scss
+++ b/src/components/StatBox.module.scss
@@ -2,5 +2,9 @@
 
 .stats-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
+
+  @media (min-width: $mobile-threshold) {
+    grid-template-columns: 1fr 1fr;
+  }
 }
