--- a/src/pages/MovieList.module.scss
+++ b/src/pages/MovieList.module.scss
@@ -6,6 +6,7 @@
   color: $ORANGE;
   text-align: center;
   max-width: 1500px;
+  margin: auto;
   @media (min-width: $mobile-threshold) {
     grid-template-columns: 3rem 1fr;
   }
